--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,22 @@
-.App {
-  text-align: center;
+body{
+  content: '';
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.page{
+  width: 100%;
+  /* height: max-content; */
+  /* height: 700px; */
+  /* background-color: #2F2F2F; */
+  background-color: #60a0e4;
+  /* background: rgba(0,0,0,0.3); */
+  /* background-image: url("./assets/"); */
+  background-image: url("./assets/food_image.jpg");
+  /* background-position-y: 40deg ; */
+  /* transform: rotateZ(0deg); */
+  background-repeat: no-repeat;
+  background-size: contain;
   display: flex;
+  justify-content: center;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
